manifests/httpd-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webinfra
  labels:
    app: webinfra
spec:
  ports:
    - name: webinfra-http
      port: 80
    - name: webinfra-webdav
      port: 81
  selector:
    app: webinfra
  type: LoadBalancer
