manifests/httpd-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpd-enterprise-gateway 
spec:
  gatewayClassName: prod
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "content.kevharv.com"
  - name: webdav
    port: 80
    protocol: HTTP
    hostname: "webdav.kevharv.com"
